syntax = "proto3";
package test;

// C#
option csharp_namespace = "rlcx.Protobuf.Examples.AddressBook";

message Person {
    string name = 1;
    int32 id = 2;  // Unique ID number for this person.
    string email = 3;
  
    enum PhoneType {
      MOBILE = 0;
      HOME = 1;
      WORK = 2;
    }
  
    message PhoneNumber {
      string number = 1;
      PhoneType type = 2;
    }
  
    repeated PhoneNumber phones = 4;
  }
  
  
  
  // Our address book file is just one of these.
  message AddressBook {
    repeated Person people = 1;
  }

service SearchServer
{
  rpc Search (SearchRequest) returns (SearchResponse);
}

message SearchRequest
{
  string term = 1;
}

message SearchResponse
{
  repeated Person people = 1;
}